<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.honeybadgerapp.SignUp" >

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:hint="@string/name_placeholder">

        <requestFocus />
    </EditText>

        <EditText
        android:id="@+id/day"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/month"
        android:layout_alignBottom="@+id/month"
        android:layout_toRightOf="@+id/month"
        android:ems="10"
        android:hint="@string/day_placeholder" />
        
    <EditText
        android:id="@+id/year"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/day"
        android:layout_alignBottom="@+id/day"
        android:layout_toRightOf="@+id/day"
        android:ems="10"
        android:hint="@string/year_placeholder" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/name"
        android:contentDescription="@string/profile_image_description"
        android:src="@drawable/icon_profile" />
    
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/month"
        android:layout_below="@+id/month"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/address_placeholder" />
    
    <EditText
        android:id="@+id/city"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_below="@+id/address"
        android:ems="10"
        android:hint="@string/city_placeholder" />

    <Spinner
        android:id="@+id/state"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_toRightOf="@+id/day"
        android:entries="@array/state_names"
        android:hint="@string/state_placeholder"
        android:prompt="@string/state_placeholder" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address"
        android:ems="10"
        android:hint="@string/zip_code_placeholder" />

    <EditText
        android:id="@+id/verifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/verify_password_placeholder"/>



    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city"
        android:layout_below="@+id/city"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:ems="10"
        android:hint="@string/username_placeholder" />

    <EditText
        android:id="@+id/month"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/month_placeholder" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/day"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelButton"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_alignRight="@+id/zip"
        android:text="@string/done_button" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword" />

</RelativeLayout>
