<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.honeybadgerapp.AccountTransfer" >

    <LinearLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/amountToTransfer"
        android:layout_alignLeft="@+id/amountToTransfer"
        android:layout_alignRight="@+id/amountToTransfer"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Spinner
            android:id="@+id/transferFromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/transferToSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/amountToTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:ems="10"
        android:hint="@string/amount_to_transfer_placeholder"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/accountEmailToTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/amountToTransfer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/account_transfer_email_placeholder"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelButton"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_alignRight="@+id/accountEmailToTransfer"
        android:text="@string/confirm_button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountEmailToTransfer"
        android:layout_below="@+id/accountEmailToTransfer"
        android:layout_marginTop="56dp"
        android:text="@string/cancel_button" />

</RelativeLayout>