<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.honeybadgerapp.CloseAccount" >

    <Button
        android:id="@+id/close_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="82dp"
        android:layout_marginRight="67dp"
        android:text="@string/title_activity_close_account" />

    <Button
        android:id="@+id/canel_close_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel_button" />

    <Spinner
        android:id="@+id/account_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/close_account"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="98dp"
        android:layout_marginRight="30dp" />
    
    <TextView
        android:id="@+id/label_close_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account_num"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/title_close_account_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
